cluster/preview/deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mod-bot-pr-${PR_NUMBER}
  namespace: staging
  labels:
    app: mod-bot-preview
    preview: pr-${PR_NUMBER}
spec:
  serviceName: mod-bot-pr-${PR_NUMBER}
  replicas: 1
  selector:
    matchLabels:
      preview: pr-${PR_NUMBER}
  template:
    metadata:
      labels:
        app: mod-bot-preview
        preview: pr-${PR_NUMBER}
    spec:
      containers:
        - name: mod-bot
          image: ghcr.io/reactiflux/mod-bot:sha-${COMMIT_SHA}
          imagePullPolicy: Always
          command: ["npm", "run", "start:staging"]
          ports:
            - containerPort: 3000
          volumeMounts:
            - mountPath: "/data"
              name: mod-bot-data
          startupProbe:
            httpGet:
              path: /healthcheck
              port: 3000
            failureThreshold: 60
            periodSeconds: 5
            timeoutSeconds: 5
          livenessProbe:
            httpGet:
              path: /healthcheck
              port: 3000
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /healthcheck
              port: 3000
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 2
  volumeClaimTemplates:
    - metadata:
        name: mod-bot-data
        labels:
          preview: pr-${PR_NUMBER}
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 256Mi
        storageClassName: do-block-storage
---
apiVersion: v1
kind: Service
metadata:
  name: mod-bot-pr-${PR_NUMBER}
  namespace: staging
  labels:
    app: mod-bot-preview
    preview: pr-${PR_NUMBER}
spec:
  selector:
    preview: pr-${PR_NUMBER}
  ports:
    - port: 80
      targetPort: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mod-bot-pr-${PR_NUMBER}
  namespace: staging
  labels:
    app: mod-bot-preview
    preview: pr-${PR_NUMBER}
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: ${PR_NUMBER}.euno-staging.reactiflux.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mod-bot-pr-${PR_NUMBER}
                port:
                  number: 80
  tls:
    - hosts:
        - ${PR_NUMBER}.euno-staging.reactiflux.com
      secretName: wildcard-staging-tls
